Use virtual threads rather than platform threads
For increased I/O concurrency